--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #e4d426;
+            background: linear-gradient(135deg, #e4d426, #f5f5f5);
             color: #333;
             line-height: 1.6;
         }
@@ -29,7 +29,7 @@
         /* Header */
         header {
             background-color: #ffffff;
-            color: #e4d426;
+            color: #28a745;
             text-align: center;
             padding: 60px 0;
         }
@@ -46,6 +46,8 @@
             font-size: 1.5rem;
             font-weight: bold;
             margin-bottom: 20px;
+            text-align: center;
+            color:#28a745;
         }
 
         /* Login Form Styling */
@@ -53,6 +55,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column; /* Stack the elements vertically */
             min-height: 70vh;
         }
 
@@ -102,6 +105,53 @@
         }
 
         button:hover {
+            background-color: #333;
+            color: white;
+        }
+
+        /* Register Box Styling */
+        .register-box {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+            margin-top: 20px; /* Added space between login and register section */
+            text-align: center;
+        }
+
+        .register-box p {
+            font-size: 1rem;
+            font-weight: normal;
+            margin-bottom: 15px;
+        }
+
+        .register-box a {
+            color: #28a745;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .register-box a:hover {
+            color:#28a745;
+
+        }
+
+        .register-box button {
+            width: 100%;
+            background-color: #28a745;
+            color: white;
+            font-size: 1.2rem;
+            padding: 12px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+
+        .register-box button:hover {
             background-color: #333;
             color: white;
         }
@@ -159,14 +209,8 @@
             background-color: #333;
             color: white;
         }
-        body {
-            background: linear-gradient(135deg, #e4d426, #f5f5f5);
-        }
-         .logo {
-            height: 50px; 
-            margin-right: 20px;
-        }
-            /* Dynamic Message Styling */
+
+        /* Dynamic Message Styling */
         #form-message {
             margin-top: 15px;
             font-size: 1rem;
@@ -180,14 +224,19 @@
         #form-message.error {
             color: red;
         }
+
+        .logo {
+            height: 50px;
+            margin-right: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="top-nav">
         <div class="nav-container">
-              <a href="index.html">
-        <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
-    </a>
+            <a href="index.html">
+                <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+            </a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
@@ -195,59 +244,66 @@
             </nav>
         </div>
     </div>
-       <header>
-        <h1>Welcome to My Website</h1>
-        <p>Your go-to solution for personalized features</p>
+    <header>
+        <h1>Welcome to Design&Dine</h1>
+        <p>We offer personalized meal ideas based on your diet and pantry, plus a shopping list to simplify your cooking.</p>
     </header>
     <div class="login-container">
-    <div class="login-box">
-        <h2>Login</h2>
-        <form id="login-form">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <button type="submit">Login</button>
-        </form>
-        <div id="login-message" style="margin-top: 15px; font-size: 1rem; font-weight: bold;"></div>
+        <div class="login-box">
+            <h2>Login</h2>
+            <form id="login-form">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+                <button type="submit">Login</button>
+            </form>
+            <div id="login-message" style="margin-top: 15px; font-size: 1rem; font-weight: bold;"></div>
+        </div>
+
+        <!-- Register section now below the login form -->
+        <div class="register-box">
+            <p>Don't have an account? <a href="register.html">Create One Now!</a></p>
+            <button onclick="window.location.href='register.html'">Register</button>
+        </div>
     </div>
-</div>
 
-<script>
-    document.getElementById('login-form').addEventListener('submit', async function (event) {
-        event.preventDefault(); // Prevent form from submitting normally
-
-        const formData = new FormData(this);
-        const loginMessage = document.getElementById('login-message');
-
-        try {
-            const response = await fetch('login.php', {
-                method: 'POST',
-                body: formData
-            });
-
-            const result = await response.json();
-
-            if (result.success) {
-                loginMessage.style.color = 'green';
-                loginMessage.textContent = result.message;
-                // Redirect after a short delay
-                setTimeout(() => {
-                    window.location.href = result.redirect;
-                }, 2000);
-            } else {
-                loginMessage.style.color = 'red';
-                loginMessage.innerHTML = result.message; // Allows for embedded links
-            }
-        } catch (error) {
-            loginMessage.style.color = 'red';
-            loginMessage.textContent = 'An error occurred. Please try again later.';
-        }
-    });
-</script>
     <footer>
         <p>&copy; 2024 My Website | <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
     </footer>
+
+    <script>
+        document.getElementById('login-form').addEventListener('submit', async function (event) {
+            event.preventDefault(); // Prevent form from submitting normally
+
+            const formData = new FormData(this);
+            const loginMessage = document.getElementById('login-message');
+
+            try {
+                const response = await fetch('login.php', {
+                    method: 'POST',
+                    body: formData
+                });
+
+                const result = await response.json();
+
+                if (result.success) {
+                    loginMessage.style.color = 'green';
+                    loginMessage.textContent = result.message;
+                    // Redirect after a short delay
+                    setTimeout(() => {
+                        window.location.href = result.redirect;
+                    }, 2000);
+                } else {
+                    loginMessage.style.color = 'red';
+                    loginMessage.innerHTML = result.message; // Allows for embedded links
+                }
+            } catch (error) {
+                loginMessage.style.color = 'red';
+                loginMessage.textContent = 'An error occurred. Please try again later.';
+            }
+        });
+    </script>
 </body>
 </html>
 
