--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="nav-container">
             <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             <nav>
-                <a href="gen.html">PLANNING</a>
+                <a href="gen-meals.html">PLANNING</a>
                 <a href="meal_plans.html">SAVED MEAL PLANS</a>
                 <a href="about.html">ABOUT</a>
             </nav>
@@ -360,7 +360,7 @@
                 <img src="logo.jpg" alt="Design&Dine Logo">
             </div>
         
-            <a href="gen.html" class="learn-more-btn">Generate Your Meal Plan</a>
+            <a href="gen-meals.html" class="learn-more-btn">Generate Your Meal Plan</a>
         </div>
     </header>
 
