--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
                 <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             </a>
             <nav>
-                <a href="gen.html">PLANNING</a>
+                <a href="gen-meals.html">PLANNING</a>
                 <a href="meal_plans.html">SAVED MEAL PLANS</a>
                 <a href="about.html">ABOUT</a>
             </nav>
