--- a/gen-meals.html
+++ b/gen-meals.html
@@ -101,9 +101,60 @@
         .meal-info button:hover {
             background: #0056b3;
         }
+
+        /* NAV */
+        .top-nav {
+        background-color: white;
+        border-bottom: 1px solid #e4d426;
+        padding: 10px 0;
+        position: sticky; /* Makes it stick to the top */
+        top: 0;
+        z-index: 1000;  
+        }
+
+        .nav-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        
+        }
+
+        nav a {
+        color:  #e4d426; /* Modern purple */
+        text-decoration: none;
+        font-size: 1rem;
+        font-weight: bold;
+        margin: 0 15px;
+        padding: 8px 12px;
+        border-radius: 4px;
+        transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        nav a:hover {
+            background-color: #e7e4ec;
+            color: white;
+        }
+
+        .logo {
+        height: 50px; 
+        margin-right: 20px;
+        }
     </style>
 </head>
 <body>
+    <div class="top-nav">
+        <div class="nav-container">
+            <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+            <nav>
+                <a href="gen.html">PLANNING</a>
+                <a href="meal_plans.html">SAVED MEAL PLANS</a>
+                <a href="about.html">ABOUT</a>
+            </nav>
+        </div>
+    </div>
     <div class="container">
         <h1>Meal Planner</h1>
         <form id="recipe-form">
