--- a/gen-meals.html
+++ b/gen-meals.html
@@ -149,7 +149,7 @@
         <div class="nav-container">
             <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             <nav>
-                <a href="gen.html">PLANNING</a>
+                <a href="gen-meals.html">PLANNING</a>
                 <a href="meal_plans.html">SAVED MEAL PLANS</a>
                 <a href="about.html">ABOUT</a>
             </nav>
