--- a/login.html
+++ b/login.html
@@ -26,12 +26,13 @@
             padding: 20px;
         }
 
-        /* Header */
         header {
             background-color: #ffffff;
             color: #28a745;
             text-align: center;
             padding: 60px 0;
+            padding: 60px 0;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         header h1 {
@@ -40,6 +41,7 @@
             font-size: 3rem;
             text-transform: uppercase;
             margin-bottom: 10px;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         }
 
         header p {
@@ -47,8 +49,11 @@
             font-weight: bold;
             margin-bottom: 20px;
             text-align: center;
-            color:#28a745;
+            color: #28a745;
+            color: #333;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
         }
+
 
         /* Login Form Styling */
         .login-container {
@@ -206,9 +211,10 @@
         }
 
         nav a:hover {
-            background-color: #333;
-            color: white;
+        background-color: #e7e4ec;
+        color: white;
         }
+
 
         /* Dynamic Message Styling */
         #form-message {
@@ -238,9 +244,9 @@
                 <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             </a>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
+                <a href="index.html">HOME</a>
+                <a href="about.html">ABOUT</a>
+                <a href="login.html">LOG IN</a>
             </nav>
         </div>
     </div>
