--- a/register.html
+++ b/register.html
@@ -26,12 +26,21 @@
             padding: 20px;
         }
 
+        .container {
+            width: 80%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
         /* Header */
         header {
             background-color: #ffffff;
             color: #28a745;
             text-align: center;
             padding: 60px 0;
+            padding: 60px 0;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         header h1 {
@@ -40,6 +49,7 @@
             font-size: 3rem;
             text-transform: uppercase;
             margin-bottom: 10px;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         }
 
         header p {
@@ -48,7 +58,13 @@
             margin-bottom: 20px;
             text-align: center;
             color: #28a745;
+            color: #333;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
         }
+
+
+       
+
 
         /* Registration Form Styling */
         .register-container {
@@ -159,8 +175,8 @@
         }
 
         nav a:hover {
-            background-color: #333;
-            color: white;
+        background-color: #e7e4ec;
+        color: white;
         }
 
         /* Dynamic Message Styling */
@@ -227,9 +243,9 @@
                 <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             </a>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
+                <a href="index.html">HOME</a>
+                <a href="about.html">ABOUT</a>
+                <a href="login.html">LOG IN</a>
             </nav>
         </div>
     </div>
@@ -304,4 +320,3 @@
     </script>
 </body>
 </html>
-
