--- a/shop_list.html
+++ b/shop_list.html
@@ -37,59 +37,15 @@
             margin-bottom: 30px;
         }
 
-        #shopping-list {
-            margin-top: 20px;
-        }
-
-        .meal {
-            padding: 20px;
-            margin-bottom: 20px;
-            background-color: #f9f9f9;
-            border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .meal:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-        }
-
-        .meal h3 {
-            font-size: 1.5rem;
-            color: #444;
-            margin-bottom: 10px;
-        }
-
-        .meal button {
-            display: inline-block;
-            background-color: #e4d426;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 15px;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .meal button:hover {
-            background-color: darkgreen;
-        }
-
-        .ingredients {
-            display: none;
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #fefefe;
-            border-radius: 5px;
-            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .ingredients ul {
+        ul {
             list-style-type: disc;
             padding-left: 20px;
-            color: #666;
+        }
+
+        li {
+            font-size: 1.2rem;
+            margin-bottom: 10px;
+            color: #444;
         }
 
         footer {
@@ -119,34 +75,28 @@
         <p>&copy; 2024 Design&Dine. All rights reserved.</p>
     </footer>
     <script>
-        function toggleIngredients(id) {
-            const el = document.getElementById(`ingredients-${id}`);
-            el.style.display = el.style.display === 'none' ? 'block' : 'none';
-        }
+        document.addEventListener("DOMContentLoaded", function () {
+            fetch('get_shopping_list.php')
+                .then(response => response.json())
+                .then(data => {
+                    const container = document.getElementById('shopping-list');
+                    if (data.success && data.ingredients) {
+                        const ul = document.createElement('ul');
 
-        // Fetch shopping list
-        fetch('get_shopping_list.php')
-            .then(response => response.json())
-            .then(data => {
-                const container = document.getElementById('shopping-list');
-                if (data.success && data.meals.length > 0) {
-                    data.meals.forEach((meal, index) => {
-                        const mealDiv = document.createElement('div');
-                        mealDiv.classList.add('meal');
-                        mealDiv.innerHTML = `
-                            <h3>${meal.meal_name}</h3>
-                            <button onclick="toggleIngredients(${index})">View Ingredients</button>
-                            <div id="ingredients-${index}" class="ingredients">
-                                <ul>${meal.ingredients.map(ing => `<li>${ing}</li>`).join('')}</ul>
-                            </div>
-                        `;
-                        container.appendChild(mealDiv);
-                    });
-                } else {
-                    container.innerHTML = "<p>No items in your shopping list.</p>";
-                }
-            })
-            .catch(error => console.error("Error loading shopping list:", error));
+                        // Display aggregated ingredients
+                        Object.keys(data.ingredients).forEach(ingredient => {
+                            const li = document.createElement('li');
+                            li.textContent = `${data.ingredients[ingredient]} ${ingredient}`;
+                            ul.appendChild(li);
+                        });
+
+                        container.appendChild(ul);
+                    } else {
+                        container.innerHTML = "<p>No items in your shopping list.</p>";
+                    }
+                })
+                .catch(error => console.error("Error loading shopping list:", error));
+        });
     </script>
 </body>
 </html>
