--- a/about.html
+++ b/about.html
@@ -29,20 +29,28 @@
 
         /* Header */
         header {
-            background-color: #ffffff;
-            color: #28a745; /* Green theme */
-            padding: 60px 0;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
+    background-color: #28a745; /* Adjust the color for your banner */
+    background-image: url('aboutusbanner.jpg'); /* Replace with your banner image URL */
+    background-size: cover; /* Ensures the image covers the whole header */
+    background-position: center; /* Centers the image */
+    color: white; /* Adjust text color for contrast */
+    padding: 80px 0; /* Adjust padding to make space for the banner */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    position: relative; /* Ensure the banner positions correctly */
+}
 
-        header h1 {
-            font-family: 'Poppins', sans-serif;
-            font-weight: 600;
-            font-size: 3rem;
-            text-transform: uppercase;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-        }
+header h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Gives a shadow for better readability */
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for text */
+    display: inline-block;
+    padding: 10px 20px;
+    border-radius: 8px; /* Optional: Rounds the background corners */
+}
 
         header p {
             font-size: 1.4rem;
