--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #fff8d1;  /* Soft light yellow to match logo */
+            background-color: #fff;  /* White background */
             color: #333;
             line-height: 1.6;
         }
@@ -69,37 +69,19 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            color: white;  /* Explicitly set text color to white */
+            color: white;
             font-size: 2.5rem;
             font-weight: bold;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Enhance text shadow */
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
             padding: 20px;
             border-radius: 8px;
             text-align: center;
         }
 
-        .cta-btn {
-            background-color: #FFDA44;  /* Updated yellow to match logo */
-            color: #000;
-            padding: 15px 30px;
-            font-size: 1.2rem;
-            font-weight: bold;
-            border-radius: 8px;
-            text-decoration: none;
-            transition: transform 0.3s ease, background-color 0.3s ease;
-            margin-top: 20px;
-            display: inline-block;
-        }
-
-        .cta-btn:hover {
-            transform: translateY(-5px);
-            background-color: #d4c72b;
-        }
-
         /* Features Section */
         .features {
             padding: 40px 0;
-            background-color: #fff8d1;  /* Light yellow */
+            background-color: #fff;  /* White background */
             text-align: center;
         }
 
@@ -117,6 +99,10 @@
             margin-left: auto;
             margin-right: auto;
             margin-bottom: 20px;
+        }
+
+        .features p strong {
+            font-weight: bold;
         }
 
         /* Footer */
@@ -175,6 +161,25 @@
             background-color: #e4d426;
             color: white;
         }
+
+        /* Button Styling */
+        .cta-btn {
+            background-color: #6a9a3c;  /* Green button */
+            color: #fff;
+            padding: 15px 30px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            border-radius: 8px;
+            text-decoration: none;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+            margin-top: 20px;
+            display: inline-block;
+        }
+
+        .cta-btn:hover {
+            transform: translateY(-5px);
+            background-color: #5a8e34;
+        }
     </style>
 </head>
 <body>
@@ -200,7 +205,6 @@
             <img src="kiwi.jpg" alt="Kiwi Image" class="kiwi">
             <div class="hero-text">
                 <h2>Transform Your Ingredients into Delicious Meals</h2>
-                <a href="gen-meals.html" class="cta-btn">Get Started</a>
             </div>
         </div>
     </header>
@@ -208,8 +212,7 @@
     <!-- Features Section -->
     <div class="features">
         <div class="container">
-            <h2>Recipe Generation, Save Favorites, Add to Shopping List</h2>
-            <p>Design&Dine helps you create personalized meal plans based on what you already have in your kitchen, and lets you save your favorites and build your shopping list with ease.</p>
+            <p><strong>Design&Dine</strong> helps you create personalized meal plans based on what you already have in your kitchen, and lets you save your favorites and build your shopping list with ease.</p>
             <a href="gen-meals.html" class="cta-btn">Generate Your Meal Plan</a>
         </div>
     </div>
