--- a/index1.html
+++ b/index1.html
@@ -34,6 +34,11 @@
             padding: 60px 0;
         }
 
+        .logo-header {
+            width: 150px;  /* Adjust the width of the logo */
+            margin-bottom: 20px;  /* Space between the logo and the heading */
+        }
+
         header h1 {
             font-family: 'Glacial Indifference', sans-serif;
             font-weight: 600;
@@ -197,6 +202,7 @@
     <!-- Header Section -->
     <header>
         <div class="container">
+            <img src="logo.jpg" alt="Design&Dine Logo" class="logo-header">
             <h1>DESIGN&DINE</h1>
             <p>Your personalized meal planning solution</p>
         </div>
